# Restic-GUI

./: LICENSE  PKGBUILD  README.md  meson.build
data/: za.co.rochi.resticgui.desktop
src/: application.vala  main.vala
src/models/: backup-job.vala  repository.vala  snapshot-entry.vala  snapshot.vala
src/services/: cron-manager.vala  job-store.vala  repo-store.vala  restic-runner.vala  scheduler-prefs.vala  secret-manager.vala  systemd-manager.vala  windows-task-scheduler.vala
src/ui/: job-edit-dialog.vala  jobs-page.vala  repo-edit-dialog.vala  repos-page.vala  snapshot-browser-dialog.vala  snapshots-page.vala  window.vala
